manifests/media-management/requestrr/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: requestrr
  namespace: media-management
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: homelab
      namespace: envoy-gateway
      #sectionName: https
  hostnames:
    - requestrr.newgamer.lan
  rules:
    - backendRefs:
        - name: requestrr
          port: 4545
